--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -8,6 +8,7 @@
 
 <div id="loadingIndicator" class="loading-indicator">
     <i class="fa fa-circle-o-notch fa-spin fa-4x"></i>
+</div>
 
 <h3 class="tnth-headline">
 {% if current_user.has_role('admin')%}
@@ -291,7 +292,7 @@ My TrueNTH Profile
 {% block document_ready %}
 $(document).ready(function(){
 
-    getOrgs({{ user.id }});
+    getOrgs({{ user.id }},true);
 
     /*** Field Validation ***/
     $('#profileForm').validator({
