Removing display: none style from portal_wrapper main div. Was causing issues with interventions where the javascript is stripped on load.

--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -24,7 +24,7 @@
 </script>
 <noscript><p><img src="//piwik.cirg.washington.edu/piwik.php?idsite={{ config.PIWIK_SITEID }}" style="border:0;" alt="" /></p></noscript>
 {% endif %}
-<div id="tnthNavWrapper" style="display: none;">
+<div id="tnthNavWrapper">
 
     <div id="tnthNavMain">
         <div id="tnthNavMainContainer">
