--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -45,6 +45,9 @@
                         {% if user and user.has_roles('application_developer') %}
                         <li><a href="{{PORTAL}}/clients">Client Applications</a></li>
                         {% endif %}
+                        {% if user and user.has_roles('provider') %}
+                        <li><a href="{{PORTAL}}/patients/">Patients</a></li>
+                        {% endif %}
                         {% if user and user.has_roles('admin') %}
                         <li><a href="{{PORTAL}}/admin">User Administration</a></li>
                         {% endif %}
