Updates to ajax get/put on initial_queries and profile. Some javascript refactoring. Remove old CSS. Handled showing topnav via CSS on shared services.

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -329,6 +329,9 @@ a:active {
 #mainNav {
   height: 71px;
 }
+#tnthNavWrapper {
+  display: none;
+}
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
