--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -358,6 +358,10 @@ a:hover, a:active {
 #mainNav {
   height: 71px;
 }
+// Hide the actual div that holds nav. This is to avoid flash of unstyled content. .show() on load of nav.
+#tnthNavWrapper {
+  display: none;
+}
 
 /** Responsive sizes **/
 @media (max-width: 480px) {
