--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -168,16 +168,8 @@ My TrueNTH Profile
         <div class="form-group" id="userOrgs">
             <label>Clinics <span class="text-muted smaller-text">(Optional)</span></label>
             <div style="margin-left: 10px">
-
-                <legend style="margin: 0  0 4px">UCSF</legend>
-                <input class="tnth-hide" type="checkbox" name="organization" value="5"/>
-                <div class="form-group" id="clinics5">
-                </div>
-                <legend style="margin: 0  0 4px">UW Medicine</legend>
-                <input class="tnth-hide" type="checkbox" name="organization" value="1"/>
-                <div class="form-group" id="clinics1">
-                </div>
-
+                <div id="fillOrgs"></div>
+                <div style="margin: 0.5em 0" class="checkbox"><label><input id="noOrgs" class="clinic" type="checkbox" name="organization" value="0">None of the Above</label></div>
             </div>
         </div>
 
