--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -11,20 +11,20 @@
   <p>Thanks for signing up for TrueNTH. Please finish your registration by telling us about yourself.</p>
   <hr />
 
-  <form class="form tnth-form" id="queriesForm" action='initial-queries' method='POST'>
+  <form class="form tnth-form to-validate" id="queriesForm" action='initial-queries' method='POST'>
 
     <p>First, tell us who you are:</p>
 
     <div class="row" id="nameBox">
       <div class="col-xs-6">
         <div class="form-group float-input-label">
-          <input class="form-control float-text" id="firstname" name="firstname" placeholder="First Name" type="text" />
+          <input class="form-control float-text" id="firstname" name="firstname" placeholder="First Name" type="text" required="required" data-error="First name is required"  />
           <div class="help-block with-errors"></div>
         </div>
       </div>
       <div class="col-xs-6">
         <div class="form-group float-input-label">
-          <input class="form-control float-text" id="lastname" name="lastname" placeholder="Last Name" type="text" />
+          <input class="form-control float-text" id="lastname" name="lastname" placeholder="Last Name" type="text" required="required" data-error="Last name is required" />
           <div class="help-block with-errors"></div>
         </div>
       </div>
@@ -42,9 +42,7 @@
       </div>
     </div>
 
-
     <input type="hidden" name="birthDate" id="birthday" value="">
-
     <div class="form-group tnth-hide" id="bdGroup">
       <label>Birth Date</label>
       <div class="row">
@@ -72,7 +70,7 @@
           <input class="form-control bd-element" id="year" name="birthdayYear" placeholder="YYYY" type="text" maxlength="4" data-birthday="true" required />
         </div>
       </div>
-      <span id="bdError" class="help-block" style="display: none">A block of help text that breaks onto a new line and may extend beyond one line.</span>
+      <span id="bdError" class="help-block tnth-hide">A block of help text that breaks onto a new line and may extend beyond one line.</span>
     </div>
 
 
@@ -159,8 +157,6 @@
           <div id="fillOrgs"></div>
           <div style="margin: 0.5em 0" class="checkbox"><label><input id="noOrgs" class="clinic" type="checkbox" name="organization" value="0">None of the Above</label></div>
         </div>
-
-        <div id="saveOrgs" class="btn btn-tnth-primary">Save My Clinics</div>
       </div>
 
     </div>
@@ -202,27 +198,27 @@ $(document).ready(function(){
     assembleContent.demo({{ user.id }});
   });
   $("#userRoles input:radio").on("click",function(){
-    $.each($("#userRoles input:radio"), function() {
-      var roles = [];
-      var theVal = $(this).val();
-      roles.push({name: theVal});
-      var toSend = {"roles": roles};
-      if ($(this).is(":checked")) {
-        tnthAjax.putRoles({{user.id}},toSend);
-        if (theVal == "patient") {
-          $("#patientQ").fadeIn();
-          $("#bdGroup").fadeIn();
-          $("#clinics").hide();
-        } else {
-          // If partner, they skip questions, fadeIn Clinics
-          $("#clinics").fadeIn();
-          $("#patientQ").hide();
-          $("#bdGroup").hide();
-        }
-      } else {
-        tnthAjax.deleteRoles({{user.id}},toSend);
-      }
-    });
+    var roles = [];
+    var theVal = $(this).val();
+    roles.push({name: theVal});
+    var toSend = {"roles": roles};
+    tnthAjax.putRoles({{user.id}},toSend);
+    if (theVal == "patient") {
+      $("#patientQ").fadeIn();
+      $("#bdGroup").fadeIn();
+      $('html, body').animate({
+        scrollTop: $('#bdGroup').offset().top
+      }, 500);
+      $("#clinics").hide();
+    } else {
+      // If partner, they skip questions, fadeIn Clinics
+      $("#clinics").fadeIn();
+      $("#patientQ").hide();
+      $("#bdGroup").hide();
+      $('html, body').animate({
+        scrollTop: $('#clinics').offset().top
+      }, 500);
+    }
   });
 
   $(".pat-q input:radio").on("click",function(){
@@ -249,15 +245,12 @@ $(document).ready(function(){
     }
   });
 
-  /**
-  $("#clinics").on("change", ".clinic", function() {
-    //assembleContent.orgs2({{ user.id }}, $(this).val(), $(this).is(":checked"));
-  });
-  **/
-
-  $("#saveOrgs").on("click",function(){
+  $("#userOrgs").on("change", "input", function() {
     assembleContent.orgs({{ user.id }});
     $("#terms").fadeIn();
+    $('html, body').animate({
+      scrollTop: $('#terms').offset().top
+    }, 2000);
   });
 
   $("#termsAgree").on("click",function(){
