--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -232,7 +232,6 @@ My TrueNTH Profile
 
 <hr />
 
-{% if current_user.has_role('admin') and not user.has_role('service') %}
 <h3>User Roles for {{ user.username }}</h3>
 <div id="userRoles">
     <div class="form-group">
@@ -275,7 +274,6 @@ My TrueNTH Profile
     </div>
 
 </div>
-{% endif %}
 
 </form>
 
@@ -426,15 +424,14 @@ $("#patientQuestions input").on("change", function(){
 /** Get and Put roles **/
 tnthAjax.getRoles({{ user.id }}, true);
 $("#userRoles input:checkbox").on("click",function(){
-    var roles = []
-    roles.push({name: $(this).val()})
+
+    var roles = $("#userRoles input:checkbox:checked").map(function(){
+        return { name: $(this).val() };
+    }).get();
+    console.log(roles);
     var toSend = {"roles": roles}
-    // If role is checked, type is PUT, otherwise DELETE
-    if ($(this).prop('checked')) {
-        tnthAjax.putRoles({{user.id}},toSend);
-    } else {
-        tnthAjax.deleteRoles({{user.id}},toSend);
-    }
+    tnthAjax.putRoles({{user.id}},toSend);
+
 });
 
 {% endblock %}
